# h1-mocap-retargeting

./: .gitignore  PROJECTNOTES.md  README.md  package.xml  setup.cfg  setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  initialize.sh  postCreate.sh
data/: JointPositions.txt  README.md
data/Thrusters/: README.md
data/Thrusters/c3d/bar/: bar_01.c3d  bar_01_filt.c3d
data/Thrusters/c3d/dumbells/: dumbells_01.c3d  dumbells_01_filt.c3d  dumbells_02.c3d  dumbells_02_filt.c3d
data/Thrusters/fbx/Bar/00001/: pose.fbx
data/Thrusters/fbx/Dumbells/00001/: pose.fbx
data/Thrusters/fbx/Dumbells/00002/: pose.fbx
h1_mocap_retarget/: mink_pelvis.py  retarget_core.py  retarget_mink.py  retarget_node.py
install/: local_setup.sh  setup.sh
install/h1_mocap_retarget/share/h1_mocap_retarget/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/h1_mocap_retarget/share/h1_mocap_retarget/launch/: mocap_rviz.launch.py
install/ros_gz_h1_description/share/ros_gz_h1_description/: local_setup.sh  package.sh
install/ros_gz_h1_description/share/ros_gz_h1_description/environment/: ros_gz_h1_description.dsv
log/: latest_build
model/: h1_2_handless.xml  h1_kinematics_only.xml
models/: README.md
mujoco_retarget/: README.md  test_render_tmp.py
mujoco_retarget/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mujoco_retarget/log/: latest_build
mujoco_retarget/model/: _tmp_fixed.urdf
results/: README.md
scripts/: README.md
src/: h1.urdf
src/h1-mocap-retargeting/: README.md  package.xml
src/h1-mocap-retargeting/config/: mocap_view.rviz
src/h1-mocap-retargeting/data/: JointAngles.txt
src/h1-mocap-retargeting/launch/: mocap_rviz.launch.py
src/h1-mocap-retargeting/scripts/: make_kinematics_only_model.py
src/h1_mocap_retarget/: README.md  package.xml  setup.py
src/h1_mocap_retarget/h1_mocap_retarget/: mink_pelvis.py  retarget_mink.py  retarget_node.py
src/h1_mocap_retarget/scripts/: convert_urdf_to_mjcf.py  make_kinematics_only_model.py
src/ros_gz_h1_controller/: setup.py
src/ros_gz_h1_gazebo/worlds/: empty_h1.sdf
src/sheet_1/: CMakeLists.txt  package.xml
src/sheet_1/config/: check_joints.rviz  manipulability.rviz
src/sheet_1/launch/: exercise_1.launch.py  exercise_2.launch.py
src/sheet_1/robot/: h1_1.urdf  h1_2.urdf
src/sheet_1/sheet_1/: exercise_2_pub.py
src/sheet_1/sheet_1/kdl_parser/: urdf.py
src/sheet_1/sheet_1/urdf_parser/: urdf.py
src/sheet_1/sheet_1/urdf_parser/xml_reflection/: __init__.py  core.py
src/sheet_1/src/: my_node.cpp
src/sheet_1/worlds/: exercise_3_2.sdf  exercise_3_3.sdf
