<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sheet_1</name>
  <version>0.0.0</version>
  <description>Sheet 1 - Humanoid Robots - Locomotion and Whole-body Control</description>

  <maintainer email="jonas.grosse-sundrup@kit.edu">Jonas Große Sundrup</maintainer>
  <maintainer email="karsten.appenzeller@student.kit.edu">Karsten Appenzeller</maintainer>
  <license>Apache 2.0</license>
  <author>Karsten Appenzeller</author>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>sdformat_urdf</depend>
  <depend>ros_gz_h1_description</depend>

  <exec_depend>rclpy</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
